package awp.kiko.entity;

/**
 * Enum für die Rollen eines Benutzers
 */
public enum Role {
    KITA,
    PARTNER,
    ADMIN
}
