@startuml User
package awp.kiko.entity {

    interface UserDetails {
        + getAuthorities(): Collection<? extends GrantedAuthority>
        + getPassword(): String
        + getUsername(): String
        + isAccountNonExpired(): boolean
        + isAccountNonLocked(): boolean
        + isCredentialsNonExpired(): boolean
        + isEnabled(): boolean
    }
    
    class User  <<@Entity>> {
        - @Id @GeneratedValue id: Integer
        - email: String
        - password: String
        - role: Role
        - emailConfirmed: boolean = false

        + getEmailConfirmed(): boolean
    }

    enum Role {
        KITA
        PARTNER
        ADMIN
    }

    User --|> UserDetails
    User ..> Role
}
@enduml